build/kubernetes/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: eat
  name: eat-svc
spec:
  selector:
    name: eat-pods
  ports:
  - name: web
    port: 4000
    targetPort: 4000
    protocol: TCP
